refactor(go-api): add book layers
